css is modified

--- a/NewDir/Hiluf.html
+++ b/NewDir/Hiluf.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+    <link rel="stylesheet" href="index.css"></style>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    <h1>This is Hilufs file</h1>
+    <div>
+        <h1>Home</h1>
+        <h1>contact</h1>
+    </div>
+    <h1>This is sample code</h1>
     <p>paragraaSph</p>
 </body>
 </html>
