button hover is added

--- a/MyApp/Request.html
+++ b/MyApp/Request.html
@@ -6,6 +6,7 @@
     <title>MYApp</title>
     <link rel="stylesheet" href="./Request.css">
 </head>
+
 <body>
         <div class="container">
             <div style="margin-top: 50px;" class="title"> 
@@ -18,8 +19,8 @@
             <div class="name">daniel degu     
         </div>
             <div class="textaccept">
-                <button style="background-color: green; width: 500px; height: 40px;">accept</button>
-                <button style="background-color: red; width: 500px; height: 40px;">decline</button>
+                <button id="button1" style=  "width: 500px; height: 40px; ">accept</button>
+                <button id ="button2" style= "width: 500px; height: 40px;">decline</button>
         </div>
         </div>
 </body>
